--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ wget = "*"
 pandas = "*"
 numpy = "*"
 matplotlib = "*"
+advcomparch = {editable = true,path = "./src"}
 
 [requires]
 python_version = "3.6"
