--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-# Python
+# ---------------------------------- Python ---------------------------------- #
 __pycache__
 *.pyc*
 *.egg-info
 .venv
 
-# Tools
-pin*
-parsec*
+# ---------------------------------- Tools ----------------------------------- #
+pin-3.6
+parsec-3.0
 
-# CSLab code
-CSLab
+# ---------------------------------- C/C++ ----------------------------------- #
+obj-intel64
 
-# Results
+# --------------------------------- Results ---------------------------------- #
 results
