--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__
 *.pyc*
 *.egg-info
 .venv
+.mypy*
 
 # ---------------------------------- Tools ----------------------------------- #
 pin-3.6
