--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ pandas = "*"
 numpy = "*"
 matplotlib = "*"
 advcomparch = {editable = true,path = "./src"}
+mypy = "*"
 
 [requires]
 python_version = "3.6"
