--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ numpy = "*"
 matplotlib = "*"
 advcomparch = {editable = true,path = "./src"}
 mypy = "*"
+black = "*"
 
 [requires]
 python_version = "3.6"
