--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ obj-intel64
 
 # --------------------------------- Results ---------------------------------- #
 results
+
+# ---------------------------------- VSCode ---------------------------------- #
+.vscode
